Redo /sign to be json -> json and date text
