# signer/docs/swagger.json
@@ -25,10 +25,10 @@
             "post": {
                 "description": "Get an RSA PSS signature for given text",
                 "consumes": [
-                    "text/plain"
+                    "application/json"
                 ],
                 "produces": [
-                    "text/plain"
+                    "application/json"
                 ],
                 "summary": "Sign the given text",
                 "parameters": [
@@ -38,7 +38,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/signer.SignBody"
                         }
                     }
                 ],
@@ -46,25 +46,19 @@
                     "200": {
                         "description": "Returns the signature",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/signer.SignOkResponse"
                         }
                     },
                     "400": {
-                        "description": "Can't read body",
+                        "description": "Can't bind JSON from body",
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "415": {
-                        "description": "Content-Type is not text/plain",
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/signer.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Issues with cryptography algorithm",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/signer.ErrorResponse"
                         }
                     }
                 }
@@ -101,7 +95,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/signer.VerifyErrorResponse"
+                            "$ref": "#/definitions/signer.ErrorResponse"
                         }
                     }
                 }
@@ -109,6 +103,33 @@
         }
     },
     "definitions": {
+        "signer.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "signer.SignBody": {
+            "type": "object",
+            "properties": {
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "signer.SignOkResponse": {
+            "type": "object",
+            "properties": {
+                "dated_text": {
+                    "type": "string"
+                },
+                "signature": {
+                    "type": "string"
+                }
+            }
+        },
         "signer.VerifyBody": {
             "type": "object",
             "properties": {
@@ -120,14 +141,6 @@
                     "items": {
                         "type": "integer"
                     }
-                }
-            }
-        },
-        "signer.VerifyErrorResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
                 }
             }
         },
