# signer/src/api.go
@@ -2,13 +2,15 @@ package signer
 
 import (
 	"encoding/base64"
+	"fmt"
 	"net/http"
+	"time"
 
 	"github.com/gin-gonic/gin"
-    swaggerFiles "github.com/swaggo/files"
-    ginSwagger "github.com/swaggo/gin-swagger"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 
-    _ "github.com/girvel/signer/docs"
+	_ "github.com/girvel/signer/docs"
 )
 
 // TYPES //
@@ -25,6 +27,10 @@ type deps struct {
 
 // ENDPOINTS //
 
+type ErrorResponse struct {
+    Error string `json:"error"`
+}
+
 // @Summary Get the public key
 // @Description Get the public key used for signature verification
 // @Produce plain
@@ -34,36 +40,49 @@ func (d *deps) public(c *gin.Context) {
     c.String(http.StatusOK, d.cryptographer.Public())
 }
 
+type SignBody struct {
+    Text string `json:"text"`
+}
+
+type SignOkResponse struct {
+    DatedText string `json:"dated_text"`
+	Signature string `json:"signature"`
+}
+
 // @Summary Sign the given text
 // @Description Get an RSA PSS signature for given text
-// @Accept plain
-// @Produce plain
-// @Param body body string true "Text to sign"
-// @Success 200 {string} string "Returns the signature"
-// @Failure 415 {string} string "Content-Type is not text/plain"
-// @Failure 400 {string} string "Can't read body"
-// @Failure 500 {string} string "Issues with cryptography algorithm"
+// @Accept json
+// @Produce json
+// @Param body body signer.SignBody true "Text to sign"
+// @Success 200 {object} signer.SignOkResponse "Returns the signature"
+// @Failure 400 {object} signer.ErrorResponse "Can't bind JSON from body"
+// @Failure 500 {object} signer.ErrorResponse "Issues with cryptography algorithm"
 // @Router /sign [post]
 func (d *deps) sign(c *gin.Context) {
-    if c.GetHeader("Content-Type") != "text/plain" {
-        c.String(http.StatusUnsupportedMediaType, "Content-Type must be text/plain")
-        return
-    }
-
-    body, err := c.GetRawData()
-    if err != nil {
-        c.String(http.StatusBadRequest, "Error reading body")
+    var body SignBody
+    if err := c.ShouldBindJSON(&body); err != nil {
+        c.JSON(http.StatusBadRequest, ErrorResponse{err.Error()})
         return
     }
     
-    signature, err := d.cryptographer.Sign(string(body))
+	// TODO author env var
+	datedText := fmt.Sprintf(
+		"%s\n\nSigned %s by %s",
+		body.Text,
+		time.Now().Format("2006-01-02 15:04:05"),
+		"girvel",
+	)
+    signature, err := d.cryptographer.Sign(datedText)
 
     if err != nil {
-        c.String(http.StatusInternalServerError, err.Error())
+        c.JSON(http.StatusInternalServerError, ErrorResponse{err.Error()})
         return
     }
 
-    c.String(http.StatusOK, base64.StdEncoding.EncodeToString(signature))
+	c.JSON(http.StatusOK, SignOkResponse{
+		DatedText: datedText, 
+		Signature: base64.StdEncoding.EncodeToString(signature),
+	})
 }
 
 type VerifyBody struct {
@@ -76,22 +95,18 @@ type VerifyOkResponse struct {
     Message string `json:"message"`
 }
 
-type VerifyErrorResponse struct {
-    Error string `json:"error"`
-}
-
 // @Summary Verify text + signature
 // @Description Verify that given signature matches given text, using the public key
 // @Accept json
 // @Produce json
 // @Param body body signer.VerifyBody true "Data-signature pair to verify; signature can be passed as base-64 string"
 // @Success 200 {object} signer.VerifyOkResponse
-// @Failure 400 {object} signer.VerifyErrorResponse
+// @Failure 400 {object} signer.ErrorResponse
 // @Router /verify [post]
 func (d *deps) verify(c *gin.Context) {
     var body VerifyBody
     if err := c.ShouldBindJSON(&body); err != nil {
-        c.JSON(http.StatusBadRequest, VerifyErrorResponse{err.Error()})
+        c.JSON(http.StatusBadRequest, ErrorResponse{err.Error()})
         return
     }
 
